Revision history for Perl extension CGI::Application::Plugin::Authentication.

0.20 Fri 29 Apr 2011
    Use Test::ConsistentVersion rather than Test::CheckVersion
    Fixed spelling errors and added descriptions - Closes #rt63839
    Removed now unused login_styles method from core module
    Added more tests completing test coverage for the Cookie module.

0.19 Wed 24 Nov 2010
    Incoporated developer changes. Made pod tests only run when TEST_AUTHOR=1.
    Automatically generate README.

0.18_2  Mon 20 Jul 2010
    Separate out display code and provide Basic and Classic alternatives to
    the login form. Added more examples. Implementd typo fix reported by
    Alexandr Ciornii. Added copyright declaration for icons in the login form.

0.18_1 Thu Jun 25 2010
    Put OS dependent guards in certain tests.
    Removed deprecated *_DESTINATION parameters.
    Added first test for devpopup and fixed undefined variable therein.
    Cannot use Test::More 0.92 as that has an issue with subtests.
 
0.18 Mon Jun 23 2010
    Completed test coverage for Driver and below
    TABLES parameter was not made mandatory in DBI driver.
    Fixed dependency on Test::More - must be at least version 0.90.
    Fixed handling of custom filters - now they must have a $param and a $value.
    Incorporated Christian Walde's suggested changes for compatibility with
    CGI::Application::Plugin::ActionDispatch.
    Adding tests around the HTML generated by the login_box function and
    verifying that it is taint free.
    Upped requiredment on CGI to 3.16 as that seems to cause unusual behaviour in returning
    self referring urls and further upped requirement on CGI to 3.16 as 3.15 has an
    unusual  interpretation of redirection headers.
    Fixed regular expressions in destination test to respect HTTP header CRLF conventions.

0.17  Thu Jan 21 19:16 GMT 2010
    Bug Fixes
    rt53533 - During initialization deferred checking the users credentials to the last possible moment.