@@ -6,7 +6,7 @@ our $VERSION = '0.20';
 
 use base qw(CGI::Application::Plugin::Authentication::Store);
 use MIME::Base64 ();
-use Digest::SHA1 ();
+use Digest::SHA ();
 use CGI::Cookie  ();
 
 # CONFIGURABLE OPTIONS
@@ -99,7 +99,7 @@ This module requires the following modules to be available.
 
 =item MIME::Base64
 
-=item Digest::SHA1
+=item Digest::SHA
 
 =item CGI::Cookie
 
@@ -232,7 +232,7 @@ sub _decode {
 
     my $checksum = delete $hash{c};
     # verify checksum
-    if ($checksum eq Digest::SHA1::sha1_base64(join("\0", $self->_secret, sort values %hash))) {
+    if ($checksum eq Digest::SHA::sha1_base64(join("\0", $self->_secret, sort values %hash))) {
         # Checksum verifies so the data is clean
         return \%hash;
     } else {
@@ -249,7 +249,7 @@ sub _encode {
     my $hash = shift;
     my %hash = %$hash;
 
-    my $checksum = Digest::SHA1::sha1_base64(join("\0", $self->_secret, sort values %hash));
+    my $checksum = Digest::SHA::sha1_base64(join("\0", $self->_secret, sort values %hash));
     $hash{c} = $checksum;
     my $rawdata = join("\0", map { join('=', $_, $hash{$_}) } keys %hash);
     return MIME::Base64::encode($rawdata, "");
@@ -262,7 +262,7 @@ sub _secret {
     my $self = shift;
     my $secret = $self->{cookie}->{options}->{SECRET} || $SECRET;
     unless ($secret) {
-        $secret = Digest::SHA1::sha1_base64( ref $self->authen->_cgiapp );
+        $secret = Digest::SHA::sha1_base64( ref $self->authen->_cgiapp );
         warn "using default SECRET!  Please provide a proper SECRET when using the Cookie store (See CGI::Application::Plugin::Authentication::Store::Cookie for details)";
     }
     return $secret;
